--- a/ur3_config.yml
+++ b/ur3_config.yml
@@ -1,26 +1,31 @@
-TouchCube:
-    trainer: sac
-    batch_size: 128
-    buffer_size: 50000
-    buffer_init_steps: 0
-    hidden_units: 128
-    init_entcoef: 1.0
-    learning_rate: 3.0e-4
-    learning_rate_schedule: constant
+behaviors:
+  TouchCube:
+    trainer_type: sac
+    hyperparameters:
+      batch_size: 128
+      buffer_size: 50000
+      buffer_init_steps: 0
+      tau: 0.005
+      steps_per_update: 1
+      save_replay_buffer: false
+      init_entcoef: 1.0
+      learning_rate: 0.0003
+      learning_rate_schedule: constant
+    network_settings:
+      vis_encode_type: simple
+      normalize: false
+      hidden_units: 128
+      num_layers: 2
+      memory:
+        memory_size: 128
+        sequence_length: 64
     max_steps: 1.25e5
-    memory_size: 128
-    normalize: false
-    num_update: 1
-    train_interval: 1
-    steps_per_update: 1
-    num_layers: 2
     time_horizon: 64
-    sequence_length: 64
     summary_freq: 5000
-    tau: 0.005
-    use_recurrent: false
-    vis_encode_type: simple
+    keep_checkpoints: 5
+    checkpoint_interval: 50000
+    threaded: true
     reward_signals:
-        extrinsic:
-            strength: 1.0
-            gamma: 0.95
+      extrinsic:
+        strength: 1.0
+        gamma: 0.95
